--- a/public/admissions/index.html
+++ b/public/admissions/index.html
@@ -73,7 +73,7 @@
                             <div class="col-md-12">
                                 <div class="slider-box slider-box2 text-left">
                                     <div class="slider-title text-left"><p data-animation="animated fadeInUp">Unlock your potential & shape your future with a world-class education </p></div>
-                                    <div class="slider-desc text-left"><h1 data-animation="animated fadeInUp"> JOIN TO BECOME A SHOOLINIAN
+                                    <div class="slider-desc text-left"><h1 data-animation="animated fadeInUp"> Go Global with <br />Shoolini University
                                     </h1></div>
                                 </div>
                             </div>
