add some LP and inner pages

--- a/public/bihar-exam-page/index.html
+++ b/public/bihar-exam-page/index.html
@@ -80,7 +80,7 @@
 								<div class="npf_wgts" data-height="330px" data-w="1222078993f709a639ec1d6ca2d2d084"></div>
 							</div>
 							<div class="col-xl-5 col-lg-6 text-end  d-lg-block">
-								<iframe class="ifrVidei" height="315" src="https://www.youtube.com/embed/2UTltB2l-vk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								<iframe class="ifrVidei" height="315" src="https://www.youtube.com/embed/2igPh6wBUII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 						</div>
 
