--- a/public/VE-coaching/coaches.html
+++ b/public/VE-coaching/coaches.html
@@ -101,7 +101,7 @@
       <div class="container d-flex align-items-center">
           
       <nav class="navbar w-100 navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="/"><img src="/VE-coaching/assets/img/logo.png" /></a>
+         <a class="navbar-brand" href="/"><img style="max-width:250px;" src="/VE-coaching/assets/img/VEmpower.png" /></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
