--- a/public/VE-coaching/index.html
+++ b/public/VE-coaching/index.html
@@ -101,7 +101,7 @@
       <div class="container d-flex align-items-center">
           
       <nav class="navbar w-100 navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#"><img src="/VE-coaching/assets/img/logo.png" /></a>
+         <a class="navbar-brand" href="#"><img style="max-width:250px;" src="/VE-coaching/assets/img/VEmpower.png" /></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
@@ -134,8 +134,7 @@
                <h4> Welcome to VE: V-Empower, a pioneering coaching initiative under CLC exclusively at Shoolini
                   University. </h4>
                <p> <i> For registering for Level -1 Coach Education Program !! ( Provisional Approval ICF )  </i></p>
-                  <p> <a class="enrollNow" target="_blank" href="https://forms.gle/AtdtB7BMDuJHi5317"> Enrol Now</a> <a class="enrollNow" target="_blank" href="https://shooliniuniversity.com/centre-for-leadership-coaching"> CLC Launch Conference
-                     Register Now </a> </p>
+                  <p> <a class="enrollNow" target="_blank" href="https://forms.gle/AtdtB7BMDuJHi5317"> Enrol Now</a> <a class="enrollNow" target="_blank" href="https://shooliniuniversity.com/centre-for-leadership-coaching"> Register Now for CLC Launch Conference </a> </p>
 
             </div>
             <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
