--- a/public/clc/index.html
+++ b/public/clc/index.html
@@ -131,7 +131,7 @@
 
 
                <div class="clcabout suntext mt-3">
-                  <p>This two-day premier event is dedicated to Leadership Excellence and Transformative Coaching. This gathering will bring together top industry leaders, renowned coaches, and emerging talent to explore the top innovative practices and strategies in leadership. The conference aligns with ICF core competencies, focusing on empathy and servant leadership, and promises to be a powerful launchpad for the future of leadership and coaching./p>
+                  <p>This two-day premier event is dedicated to Leadership Excellence and Transformative Coaching. This gathering will bring together top industry leaders, renowned coaches, and emerging talent to explore the top innovative practices and strategies in leadership. The conference aligns with ICF core competencies, focusing on empathy and servant leadership, and promises to be a powerful launchpad for the future of leadership and coaching.</p>
                </div>
 
 
@@ -178,7 +178,7 @@
          <div class="row">
 
             <div class="col-md-12">
-               <div class="keyfeature text-center">
+               <div class="keyfeature text-center mb-5">
                   <h2 class="Launchheading">Key <span>Features</span> </h2>
                </div>
             </div>
@@ -194,7 +194,7 @@
             </div>
 
             <div class="col-md-4">
-               <div class="features pointss text-center">
+               <div class="honouringtext features pointss text-center">
                   <div class="feature icon"><i class="bi bi-people-fill"></i></div>
                   <div class=" feature header m-1">
                      <h5> Honouring Our Coaches  </h5>
@@ -225,6 +225,8 @@
       </div>
       </div>
    </section>
+
+   
 
    <section class="advantages">
       <div class="container">
@@ -260,7 +262,90 @@
    </section>
 
 
+   <section class="expect">
+      <div class="container">
+      <div class="row">
+    
+         <div class="col-md-12">
+            <div class="expectt text-center ">
+               <h2 class="Launchheading">What to <span>Expect? </span> </h2>
+            </div>
+         </div>
 
+
+   
+      <div class="col-md-4">
+      <div class="expectcontent">
+      <div class="expecticon-inner text-center p-4">
+      <img src="/clc/assets/img/routine.png"/>
+      <h3>Exclusive Insights from Top Industry Leaders </h3>
+      <p>Learn directly from global and national leaders who will provide actionable insights on global trends reshaping leadership and coaching</p>
+      </div>
+      </div>  
+      </div>
+   
+      <div class="col-md-4">
+         <div class="expectcontent">
+         <div class="expecticon-inner text-center p-4">
+         <img src="/clc/assets/img/routine.png"/>
+         <h3>Interactive Coaching Sessions  </h3>
+         <p>Participate in hands-on coaching workshops led by top experts who will dive deep into leadership strategies you can implement in your organisation. </p>
+         </div>  
+         </div>
+         </div>
+   
+   
+         <div class="col-md-4">
+            <div class="expectcontent">
+            <div class="expecticon-inner text-center p-4">
+            <img src="/clc/assets/img/routine.png"/>
+            <h3>Networking with Industry Pioneers</h3>
+            <p>Structured networking breaks and an exclusive Gala Dinner will allow you to forge meaningful relationships with decision-makers driving change across sectors.</p>
+            </div>  
+            </div>
+            </div>
+         </div>
+   
+   <div class="row mt-3">
+            <div class="col-md-4">
+               <div class="expectcontent">
+               <div class="expecticon-inner text-center p-4">
+               <img src="/clc/assets/img/routine.png"/>
+               <h3>Cutting-Edge Leadership Trends</h3>
+               <p>Explore the latest leadership innovations, from adapting to the post-pandemic workplace to integrating AI and coaching in leadership decision-making. </p>
+               </div>  
+               </div>
+               </div>
+   
+   
+   
+               <div class="col-md-4">
+                  <div class="expectcontent">
+                  <div class="expecticon-inner text-center p-4">
+                  <img src="/clc/assets/img/routine.png"/>
+                  <h3> Special Focus on Coaching for Organisational Growth</h3>
+                  <p>Learn how tailored coaching solutions are helping businesses stay competitive in a rapidly changing world.</p>
+                  </div>  
+                  </div>
+                  </div>
+   
+   
+                  <div class="col-md-4">
+                     <div class="expectcontent">
+                     <div class="expecticon-inner text-center p-4">
+                     <img src="/clc/assets/img/routine.png"/>
+                     <h3>Certification Opportunities</h3>
+                     <p>Get a head start on your journey toward certification as a leadership coach. The conference will introduce attendees to the certification pathways (provisional approved) endorsed by the International Coaching Federation (ICF).</p>
+                     </div>  
+                     </div>
+                     </div>
+   
+   
+                  </div>
+      </div>   
+      </div>
+   
+      </section>
 
 
 
@@ -575,7 +660,7 @@
                               <tbody class="benifitscontent">
                                  <tr>
                                     <td>
-                                       <p class="ultimatetext m-0"> Exclusive to V-Empowe Coaches at Shoolini University
+                                       <p class="ultimatetext m-0"> Exclusive to V-Empower Coaches at Shoolini University
                                        </p>
                                     </td>
                                     <td colspan="2">
