add changes clc

--- a/public/clc/speakers.html
+++ b/public/clc/speakers.html
@@ -211,15 +211,7 @@
                               </figcaption>
                            </figure>
                         </div>
-                        <div class="grid col-md-4 col-6">
-                           <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Prashant-Jain.jpg" /></div>
-                              <figcaption>
-                                 <h2> Prashant Jain  </h2>
-                                 <p>MD GE Power India Ltd.  </p>
-                              </figcaption>
-                           </figure>
-                        </div>
+                     
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
                               <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Devi-Prasad-Dash.jpeg" /></div>
@@ -231,10 +223,10 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Shaswat-K-Mitra.jpg" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/" /></div>
                               <figcaption>
-                                 <h2> Shashwat K. Mitra  </h2>
-                                 <p>Global Head of HR KPIT  </p>
+                                 <h2>Preeti D’Mello  </h2>
+                                 <p>Global Head, Culture and Diversity & LeaD Academy, TCS </p>
                               </figcaption>
                            </figure>
                         </div>
@@ -296,10 +288,10 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Nishtha-Anand.jpg" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Anju Abrol.png" /></div>
                               <figcaption>
-                                 <h2>Nishtha Anand  </h2>
-                                 <p> Trustee & Director, School of Media and Communications, Shoolini University </p>
+                                 <h2> Anju Abrol</h2>
+                                 <p>Head of Wholesale Banking APAC at ING</p>
                               </figcaption>
                            </figure>
                         </div>
@@ -314,11 +306,11 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Avnee-khosla.jpg" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/" /></div>
                               <figcaption>
-                                 <h2> Avnee Khosla  </h2>
-                                 <p> VP/ Director Admissions, Student Experience &
-                                    Financial Aid Shoolini University </p>
+                                 <h2>Suresh Kumar  </h2>
+                                 <p> Former Chief Principal Secretary to Chief Minister, Punjab
+                                    </p>
                               </figcaption>
                            </figure>
                         </div>
