--- a/public/clc/index.html
+++ b/public/clc/index.html
@@ -667,7 +667,7 @@
                               <tbody class="benifitscontent">
                                  <tr>
                                     <td>
-                                       <p class="ultimatetext m-0"> Exclusive to V-Empowe Coaches at Shoolini University
+                                       <p class="ultimatetext m-0"> Exclusive to V-Empower Coaches at Shoolini University
                                        </p>
                                     </td>
                                     <td colspan="2">
