--- a/public/clc/speakers.html
+++ b/public/clc/speakers.html
@@ -306,7 +306,7 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Suresh Kumar.jpg" /></div>
                               <figcaption>
                                  <h2>Suresh Kumar  </h2>
                                  <p> Former Chief Principal Secretary to Chief Minister, Punjab
