--- a/public/clc/index.html
+++ b/public/clc/index.html
@@ -375,9 +375,9 @@
                </div>
                <div class="clc-effective points">
                   <ul class="text-left">
-                     <li>Enhance Leadership: Master advanced coaching techniques to elevate leadership effectiveness within your organisation.</li>
-                     <li>Boost Productivity: Integrate coaching into management practices to drive innovation, improve team performance, and increase productivity.</li>
-                  <li>Build Stronger Teams: Develop skills to promote collaboration and strengthen relationships among team members for a more cohesive work environment.</li>
+                     <li><strong>Enhance Leadership:</strong> Master advanced coaching techniques to elevate leadership effectiveness within your organisation.</li>
+                     <li><strong>Boost Productivity:</strong> Integrate coaching into management practices to drive innovation, improve team performance, and increase productivity.</li>
+                  <li><strong>Build Stronger Teams:</strong> Develop skills to promote collaboration and strengthen relationships among team members for a more cohesive work environment.</li>
                   </ul>
                </div>
             </div>
