--- a/public/clc/launch-conference.html
+++ b/public/clc/launch-conference.html
@@ -239,31 +239,44 @@
                   <tbody class="text-left">
                   
                      <tr>
-                        <td> 9:35-9:40 AM </td>
+                        <td>09:35 to 09:40 AM </td>
                         <td> Recap and Agenda </td>
                         <td>Payal Jindal Khanna (Deputy Director and Head, Centre for Leadership Coaching)  </td> 
-                        <td>  </td> 
+                        <td> APJ  </td> 
+                     </tr>
+
+                     <tr>
+                        <td>09:40 to 10:00 AM </td>
+                        <td> Key Note 2- Emerging Trends in Coaching in India</td>
+                        <td> Prem Singh, Hon' President NHRDN, President Group HR JK Organisation </td> 
+                        <td> APJ  </td> 
                      </tr>
                      <tr>
-                        <td>9:40-10:25 AM </td>
+                        <td>10:05 to 10:20 AM </td>
+                        <td>Speaker 3-Using the Power of Archetypes for leadership Coaching  </td>
+                        <td>Nirupama Subramanian Co-Founder & Managing Partner GLOW/ Founder CEO- Powerfulife</td> 
+                        <td> APJ  </td> 
+                     </tr>
+                     <tr>
+                        <td>10:20 to 11:05 AM </td>
                         <td> Is Everybody Coachable or not?: Separating Truth from Myth </td>
                         <td> Himanshu Jain (Founder CEO Promenable CEO Vibes Healthcare), Chandrajit Pati (Founder CP HR Advisory, Managing Partner -Kontempore HR Services), Mridu Bhandari (Journalist CNBC Network 18), Sushma Banthia (PCC coach), Session Chair: Vishal Anand (Co-Founder and Pro Chancellor at Shoolini University) </td> 
                         <td>APJ  </td> 
                      </tr>
                      <tr>
-                        <td> 10:25-10:40 AM </td>
-                        <td> Using the Power of Archetypes for Leadership Coaching (Coaching: Women Vs Men) </td>
-                        <td> Nirupama S (Co-Founder & Managing Partner GLOW/ Founder CEO Powerfulife) </td> 
+                        <td>11:05 to 11:20AM  </td>
+                        <td>Speaker 4-TCS Coaching Case Study </td>
+                        <td> Preeti D’mello, Global Head, Culture and Diversity & LeaD Academy, TCS </td> 
                         <td> APJ </td> 
                      </tr>
                      <tr>
-                        <td> 10:45-11:30 PM </td>
-                        <td> Mastering the Balance: Coaching on Hard Skills Vs. Soft Skills  </td>
-                        <td> Session Chair: Avnee Khosla (Trustee & Vice President, Shoolini University)) </td> 
+                        <td>11:20 to 12:05 PM</td>
+                        <td>Leadership Excellence: Tailored Coaching for CEOs, Board Members, and Managers at All Levels</td>
+                        <td>Vivek Atray-Ex IAS ,TEDx Speaker,Author/ Distinguished Leaders and Experts- Session Chair: Avnee Khosla VP/ Director Admissions, Student Experience & Financial Aid Shoolini University  </td> 
                         <td> APJ </td> 
                      </tr>
                      <tr>
-                        <td> 11:30-11:35 PM </td>
+                        <td>12:05 to 12:15 PM</td>
                         <td> Executive Summary and Valedictory Note </td>
                         <td>Payal Jindal Khanna (Deputy Director and Head, Centre for Leadership Coaching)  </td> 
                         <td> APJ </td> 
