--- a/public/clc/speakers.html
+++ b/public/clc/speakers.html
@@ -223,7 +223,7 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Preeti.jpg" /></div>
                               <figcaption>
                                  <h2>Preeti D’Mello  </h2>
                                  <p>Global Head, Culture and Diversity & LeaD Academy, TCS </p>
