--- a/public/clc/speakers.html
+++ b/public/clc/speakers.html
@@ -172,15 +172,7 @@
                               </figcaption>
                            </figure>
                         </div>
-                        <div class="grid col-md-4 col-6">
-                           <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Shiv-Shivakumar.jpg" /></div>
-                              <figcaption>
-                                 <h2> Shiv Shivakumar  </h2>
-                                 <p>Ex Chairman & CEO- PepsiCo/ Ex CEO EM- Nokia  </p>
-                              </figcaption>
-                           </figure>
-                        </div>
+                     
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
                               <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/PV-Ramana-Murthy.jpeg" /></div>
@@ -297,10 +289,10 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Ashoo-khosla.jpeg" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Dhananjay.jpg" /></div>
                               <figcaption>
-                                 <h2> Ashoo Khosla </h2>
-                                 <p>Chief Learning Officer, Shoolini University  </p>
+                                 <h2> Dhananjay Singh  </h2>
+                                 <p>Director General and National Board Member, National HRD Network (NHRDN) </p>
                               </figcaption>
                            </figure>
                         </div>
@@ -325,11 +317,21 @@
                         </div>
                         <div class="grid col-md-4 col-6">
                            <figure class="effect-steve modal-link">
-                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Alipta-Dutta.jpg" /></div>
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Avnee-khosla.jpg" /></div>
                               <figcaption>
-                                 <h2> Alipta Dutta </h2>
-                                 <p> Director - Corporate Relations & Placements
-                                    Shoolini University </p>
+                                 <h2>Avnee Khosla</h2>
+                                 <p>VP/ Director Admissions, Student Experience & Financial Aid Shoolini University</p>
+                              </figcaption>
+                           </figure>
+                        </div>
+
+
+                        <div class="grid col-md-4 col-6">
+                           <figure class="effect-steve modal-link">
+                              <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Dr v.p.jpg" /></div>
+                              <figcaption>
+                                 <h2>Dr V.P. Singh </h2>
+                                 <p>Adviser & Distinguished Professor, Jaipuria Institute of Management, Chairman, Asia Coaching Network </p>
                               </figcaption>
                            </figure>
                         </div>
