--- a/public/clc/index.html
+++ b/public/clc/index.html
@@ -125,8 +125,8 @@
          <div class="row">
 
 
-            <div class="col-md-4 mt-4">
-               <img src="/clc/assets/img/clctwo.jpg" alt="" class="img-thumbnail">
+            <div class="col-md-4 ">
+               <img src="/clc/assets/img/clctwo2.jpg" alt="" class="img-fluid clc-img">
             </div>
             <div class="col-md-8">
                <div class="clc-headline ">
