--- a/public/clc/launch-conference.html
+++ b/public/clc/launch-conference.html
@@ -155,7 +155,7 @@
                      <tr>
                         <td> 10:30-10:35 AM</td>
                         <td> Chancellor's Address </td>
-                        <td>Guests </td>
+                        <td>Prof PK Khosla Chancellor, Shoolini University </td>
                         <td> APJ</td>
                      </tr>
 
@@ -168,8 +168,8 @@
 
                      <tr>
                         <td>10:55 - 11:15 AM </td>
-                        <td> Inaugral Address: Global Coaching Trends</td>
-                        <td> Magdalena Mook (CEO of International Coaching Federation) Global Coaching Trends </td>
+                        <td> Inaugural Address: Global Coaching Trends</td>
+                        <td> Magdalena Mook (CEO of International Coaching Federation) </td>
                         <td> APJ</td>
                      </tr>
                      <tr>
@@ -201,7 +201,7 @@
 
                      <tr>
                         <td>1:00-1:30  PM </td>
-                        <td> Inauguration of the Centre </td>
+                        <td> Inauguration of the Centre</td>
                         <td> Guests </td>
                         <td> AI Tower </td>
                      </tr>
@@ -218,7 +218,7 @@
                      </tr>
                      <tr>
                         <td> 2:45- 3:30 PM </td>
-                        <td>  Panel 2: Navigating Leadership: Coaching in Hierarchical Organizations </td>
+                        <td>  Panel 2: Navigating Leadership: Coaching in Hierarchical Organisations</td>
                         <td>  Lt Gen. KJS Dhillon-PVSM, UYSM, YSM, VSM (Retd)/ Dr. V.P. Singh- Adviser & Distinguished Professor, Jaipuria Institute of Management, Chairman, Asia Coaching Network/Brigadier S D Mehta, SM, Director Operations Shoolini University - Session Chair: Sunil Rai- Chancellor UPES </td>
                         <td> APJ  </td>
                      </tr>
