--- a/public/clc/speakers.html
+++ b/public/clc/speakers.html
@@ -325,7 +325,7 @@
                            <figure class="effect-steve modal-link">
                               <div class="spekr"><img class="img-thumbnail" src="/clc/assets/img/speakers/Anuj Batta.png" /></div>
                               <figcaption>
-                                 <h2>Anuj Batta</h2>
+                                 <h2> Dr Anuj Batta</h2>
                                  <p>Managing Director - Quanolytics and TheHRAnalytics.com </p>
                               </figcaption>
                            </figure>
