--- a/public/clc/launch-conference.html
+++ b/public/clc/launch-conference.html
@@ -225,7 +225,7 @@
                      <tr>
                         <td> 3:30 -4:15 PM </td>
                         <td>Panel 3: Bridging the Gap: Leveraging Industry- Academia Partnerships to Develop Future Leaders  </td>
-                        <td>  Dhananjay Singh Director General NHRDN/Dr. Sachin Gulati- Distinguished Practitioner Fellow, UN PRME LEAP Researcher/Shaan Vats- Senior Practice Leader HR Infosys/Vishal Anand Co-Founder and Pro- Chancellor at Shoolini University - Session Chair: Sushma Banthia Leader and Executive Coach,IC-PCC </td>
+                        <td>  Dhananjay Singh Director General NHRDN/Dr. Sachin Gulati- Distinguished Practitioner Fellow, UN PRME LEAP Researcher/Shaan Vats- Senior Practice Leader HR Infosys/Vishal Anand Co-Founder and Pro- Chancellor at Shoolini University - Session Chair: Sushma Banthia, Leadership & Executive Coach ICF-PCC </td>
                         <td>  APJ </td>
                      </tr>
                      <tr>
