--- a/public/brp/index.html
+++ b/public/brp/index.html
@@ -128,7 +128,7 @@
 
                                         <div class="service-text pt-4 pt-lg-0 px-0 px-lg-4">
 
-                                            <h2 class="text-capitalize mb-4" >
+                                            <h2 class="text-capitalize page-title mb-4" >
                                                 Details</h2>
 
 
@@ -147,9 +147,9 @@
                                                 <div class="service-text">
                                                     <p><i class="fa fa-check-circle" aria-hidden="true"></i> You can be a part of 2 Mega Lucky Draws!!
                                                     </p>
-                                                    <ul style="padding-left: 36px;">
-                                                        <li style="list-style-type: square;margin-bottom:5px;margin-top:5px;"> Refer minimum 2 friends with completed application forms & enter our 1st Mega lucky draw. 3 lucky winners can get smart phones/Amazon gift vouchers worth 2 lacs! </li>
-                                                        <li style="list-style-type: square;margin-bottom:10px;"> Get one friend to complete their admission with us & enter our 2nd Mega lucky draw. One lucky winner gets an iPhone!! </li>
+                                                    <ul class="under-li" style="padding-left: 36px;">
+                                                        <li style="list-style-type: square;"> Refer minimum 2 friends with completed application forms & enter our 1st Mega lucky draw. 3 lucky winners can get smart phones/Amazon gift vouchers worth 2 lacs! </li>
+                                                        <li style="list-style-type: square;"> Get one friend to complete their admission with us & enter our 2nd Mega lucky draw. One lucky winner gets an iPhone!! </li>
                                                     </ul>
                                                 </div>
 
@@ -179,13 +179,13 @@
                         </section>
 
 
-                        <section class="section service-area bg-gray overflow-hidden ptb_100" id="test">
+                        <section class="section service-area bg-white overflow-hidden ptb_100" id="test">
                             <div class="container">
                                 <div class="row justify-content-between">
                                     <div class="col-12  order-2 order-lg-1"  >
 
                                         <div class="service-text pt-4 pt-lg-0 px-0 px-lg-4">
-                                            <h2 class="text-capitalize mb-4" >Terms and Conditions</h2>
+                                            <h2 class="text-capitalize page-title mb-4" >Terms and Conditions</h2>
 
                                             <ul class="service-list style-two">
 
@@ -235,9 +235,7 @@
 
                                         </div>
 
-                                        <br /><br />
-
-                                        <div class="section-heading text-center">
+                                        <div class=" text-center">
 
                                             <p class=" d-sm-block mt-4">Let’s build a stronger Shoolini community together!</p>
 
@@ -265,13 +263,18 @@
  border-radius:10px;
   width: 100%;
 }
-
+ul.under-li li {
+    font-size: 16px !important;
+    margin-bottom: 6px;
+}
 #customers td, #customers th {
   border: 1px solid #ddd;
   
   padding: 10px;
 }
-
+ul.under-li {
+    margin: 10px 0 !important;
+}
 #customers tr:nth-child(even){background-color: #f2f2f2;}
 
 #customers tr:hover {background-color: #ddd;}
