--- a/public/apply/index.html
+++ b/public/apply/index.html
@@ -166,7 +166,7 @@
                     <div class="row no-margin">
                         <div class="col-md-7 padding-leftright-null">
                             <div class="text padding-bottom-null">
-                                <h1 class="margin-bottom-extrasmall white"> India’s No. 1 Private University </h1>
+                                <h1 class="margin-bottom-extrasmall white"> A Top Private University in India </h1>
 
 
 
