--- a/public/hta/index.html
+++ b/public/hta/index.html
@@ -282,7 +282,7 @@
 				<img src="https://shooliniuniversity.com/assets/landing/images/su-qs.png">
 			</div>--->
                 <div class="su-tagline">
-                    <h4> India's No.1 Private University</h4>
+                    <h4> A Top Private University in India</h4>
                 </div>
             </div>
         </div>
