--- a/public/VE-coaching/index.html
+++ b/public/VE-coaching/index.html
@@ -131,10 +131,9 @@
                data-aos-delay="200">
                <h1 class="text-main">V-Empower at Shoolini University </h1>
                <h2>Rediscover Your Potential with CLC</h2>
-               <h4> Welcome to VE: V-Empower, a pioneering coaching initiative under CLC exclusively at Shoolini
-                  University. </h4>
+               <h4>Welcome to VE: V-Empower, a pioneering coaching initiative under Centre for Leadership Coaching (CLC) exclusively at Shoolini University.</h4>
                <p> <i> For registering for Level -1 Coach Education Program !! ( Provisional Approval ICF )  </i></p>
-                  <p> <a class="enrollNow" target="_blank" href="https://forms.gle/AtdtB7BMDuJHi5317"> Enrol Now</a> <a class="enrollNow" target="_blank" href="https://shooliniuniversity.com/centre-for-leadership-coaching"> Register Now for CLC Launch Conference </a> </p>
+                  <p> <a class="enrollNow" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd7-P0w24VOYjjlRZKnv0jIAYSq5Vt9xDYRDUrfpjFll3HY2w/viewform"> Enrol Now</a> <a class="enrollNow" target="_blank" href="https://shooliniuniversity.com/media/pdf/ICF-Coach-Program_Shoolini.pdf">Download Brochure </a> </p>
 
             </div>
             <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
