--- a/public/thankyou/index.html
+++ b/public/thankyou/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="white text-center">Our admissions team will get in touch with you.</p>
 
 			<div class="header-btn-group my-16" align="center"> 
-             <a href="https://shooliniuniversity.com/" class="start_course">GO BACK TO MAIN PAGE</a>
+           <a href="https://shooliniuniversity.com/chat-with-ambassador" class="start_course">Reach a Student Ambassador</a>
       	 </div>
        <p class="white text-center"><div style="font-color:black;font-size:15px;text-align:center;">Redirecting in <span id="countdown">20</span> seconds to main site.</div></p>
 	</div>
@@ -126,7 +126,7 @@ Himachal Pradesh 173229</p>
                 }
             };
 
-            cinterval = setInterval(timeDec, 1000);
+            cinterval = setInterval(timeDec, 3000);
         })();
 
     </script>
